<resources>

    <string name="app_name">微聘</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">微聘</string>
    <string name="updatefailure">请检查网络是否畅通</string>
    <string name="updatehint">更新提示</string>
    <string name="buttoncancle">取消</string>
    <string name="buttonsure">确定</string>
    <string name="notifationupdatetitle">微聘更新启动</string>
    <string name="left_and_right">Left and Right</string>
    <string name="menu">菜单</string>
    <string name="findwork">我要找工作</string>
    <string name="myoral">我的面试</string>
    <string name="myinfo">我的资料</string>
    <string name="sharetofriend">告诉好友</string>
    <string name="mysetting">我的设置</string>
    <string name="goback">返回</string>
    <string name="editstr">编辑</string>
    <string name="settingstr">设置</string>
    <string name="oralinfotitle">面试详情</string>
    <string name="userName">姓名</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="userIdCard">身份证号码</string>
    <string name="telNumber">手机号码</string>
    <string name="userAddress">现住地址</string>
    <string name="userVocation">行业</string>
    <string name="expectSalary">期望薪资</string>
    <string name="workYears">工作年限(年)</string>
    <string name="employPosition">应聘岗位</string>
    <string name="editDone">提交测试</string>
    <string name="pleaseEdit">请填写:</string>
    <string name="oral">面试</string>
    <string name="offer">录用</string>
    <string name="share">分享</string>
    <string name="zhiwei">职位</string>
    <string name="haoyou">好友</string>
    <string name="more">更多</string>
    <string name="hire_detail">面试地址</string>
    <string name="dail_telphone">申请面试</string>
    <string name="com_name">企业名称</string>
    <string name="gangwei">面试岗位</string>
    <string name="oral_time_str">面试时间</string>
    <string name="salary_str">薪酬</string>
    <string name="dsalary_str">岗位薪酬</string>
    <string name="com_address_str">面试地址</string>
    <string name="tel_number_str">联系电话</string>
    <string name="tel_yeartime">工作年限</string>
    <string name="next_str">下一步</string>
    <string name="verify_tel_str">验证</string>
    <string name="enter_tel_number_str">输入手机号码</string>
    <string name="send_verfy_code">发送验证码</string>
    <string name="enter_verify_code">输入验证码</string>
    <string name="send_verify_message">验证码已经发送到您的手机,收到之后在上面输入，点进下一步完成验证</string>
    <string name="tel_enter_error_toast_msg">请输入正确的手机号码</string>
    <string name="enter_verify_code_error_msg">请检查验证码是否正确</string>

    <string-array name="gongzhongitem">
        <item>不限</item>
        <item>管理</item>
        <item>服务</item>
        <item>销售</item>
        <item>技工</item>
        <item>普通工人</item>
    </string-array>
    <string-array name="sexitem">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="workstateitem">
        <item>在职急于找工作</item>
        <item>离职正在找工作</item>
        <item>在职不急于找工作</item>
    </string-array>
<string name="errcode_success">发送成功</string>
	<string name="errcode_cancel">发送取消</string>
	<string name="errcode_deny">发送被拒绝</string>
	<string name="errcode_unknown">发送返回</string>
</resources>